--- a/client/angular.json
+++ b/client/angular.json
@@ -30,6 +30,7 @@
               "src/assets"
             ],
             "styles": [
+              "node_modules/primeng/resources/themes/lara-light-teal/theme.css",
               "src/styles.scss"
             ],
             "scripts": []
