--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -21,7 +21,7 @@
     "useDefineForClassFields": false,
     "lib": ["ES2022", "dom"],
     "paths": {
-      "@meme-lib/api-connector": ["libs/api-connector/src/index.ts"]
+      "@meme-lib/api-connector": ["./libs/api-connector/src/index.ts"]
     }
   },
   "angularCompilerOptions": {
